[package]
name = "triathlon_tracker"
version = "0.1.0"
authors = ["muffledcry <muffledcry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.17.4"
wasm-pack = "0.9.1"
wasm-bindgen = "0.2.69"
cargo-web = "0.6.26"